upgrade to jdk 11